--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - NODE_SERVER=http://localhost:5000
       - RESOURCE_SERVER_PLAYERS_ENDPOINT=http://resource-server:8080/favouritePlayers
       - CLIENT_ID=devflection-node-js
-      - CLIENT_SECRET=0xzlVWbEM8YQudWtWV5Qje4DCI8RwgCe
+      - CLIENT_SECRET=iLnAxjsRGIHtE7HcoTwAH7wap1EIrrM9
       - SCOPE=devflectionPlayers
       - TOKEN_ENDPOINT_URL=http://keycloak:8080/auth/realms/master/protocol/openid-connect/token
       - AUTHORIZE_REQUEST_URL=http://localhost:8083/auth/realms/master/protocol/openid-connect/auth
@@ -18,6 +18,9 @@ services:
   resource-server:
     container_name: resource-server
     build: ./resource-server
+    environment:
+      - OAUTH_ISSUER_URI=http://keycloak:8080/auth/realms/master
+      - PORT=8080
     ports:
       - 8080:8080
   keycloak:
@@ -25,5 +28,6 @@ services:
       environment:       
         KEYCLOAK_USER: admin
         KEYCLOAK_PASSWORD: admin
+        KEYCLOAK_FRONTEND_URL: http://keycloak:8080
       ports:
         - 8083:8080
