--- a/resource-server/src/main/resources/application.properties
+++ b/resource-server/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-server.port=8080
+server.port=${PORT}
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${OAUTH_ISSUER_URI}
+logging.level.org.springframework.security=DEBUG
