Fixed problem with issuer being different than the container address

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - NODE_SERVER=http://localhost:5000
       - RESOURCE_SERVER_PLAYERS_ENDPOINT=http://resource-server:8080/favouritePlayers
       - CLIENT_ID=devflection-node-js
-      - CLIENT_SECRET=iLnAxjsRGIHtE7HcoTwAH7wap1EIrrM9
+      - CLIENT_SECRET=BID5z7q66LD4wkjOGVhkn9z7fyo1NaDE
       - SCOPE=devflectionPlayers
       - TOKEN_ENDPOINT_URL=http://keycloak:8080/auth/realms/master/protocol/openid-connect/token
       - AUTHORIZE_REQUEST_URL=http://localhost:8083/auth/realms/master/protocol/openid-connect/auth
@@ -19,7 +19,8 @@ services:
     container_name: resource-server
     build: ./resource-server
     environment:
-      - OAUTH_ISSUER_URI=http://keycloak:8080/auth/realms/master
+      - OAUTH_ISSUER_URI=http://localhost:8083/auth/realms/master
+      - OAUTH_JWK_URI=http://keycloak:8080/auth/realms/master/protocol/openid-connect/certs
       - PORT=8080
     ports:
       - 8080:8080
@@ -28,6 +29,5 @@ services:
       environment:       
         KEYCLOAK_USER: admin
         KEYCLOAK_PASSWORD: admin
-        KEYCLOAK_FRONTEND_URL: http://keycloak:8080
       ports:
         - 8083:8080
