--- a/resource-server/src/main/resources/application.properties
+++ b/resource-server/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=${PORT}
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${OAUTH_ISSUER_URI}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${OAUTH_JWK_URI}
 logging.level.org.springframework.security=DEBUG
